# autodoceval

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tasks.py
.claude/: commands.md  settings.local.json
.deepeval/: .deepeval_telemetry.txt
autodoceval/: __init__.py  auto_improve.py  cli.py  compare.py  evaluator.py  file_tools.py  improver.py
autodoceval/examples/: example_doc.md
docs/: sample.md
evals/registry/evals/: doc_eval.yaml
scripts/: auto_improve.py  closed_loop.py  compare_docs.py  file_tools.py  generate_qa.py  grade_docs.py  improve_docs.py
tests/: README.md
tests/integration/: test_workflow.py
tests/unit/autodoceval/: test_cli.py  test_evaluator.py  test_file_tools.py  test_improver.py
